# secop-intelligence

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: quality.yml
.streamlit/: config.toml
docs/: attention-rules.md  data-contract.md  deployment.md  interface.md  modifications-contract.md  portfolio.md  rule-calibration.md  warehouse.md
docs/releases/: v0.1.0.md
src/secop_intelligence/: __init__.py  analytics.py  attention.py  attention_cli.py  calibration.py  calibration_cli.py  cli.py  contracts.py  demo.py  modifications.py  modifications_cli.py  privacy.py  review_export.py  warehouse.py  warehouse_cli.py
tests/: test_analytics.py  test_attention.py  test_calibration.py  test_contracts.py  test_demo.py  test_modifications.py  test_privacy.py  test_review_export.py  test_version.py  test_warehouse.py
